<resources>
    <string name="app_name">Devsoc20</string>
    <string name="emailpassword_status_fmt">Email User: %1$s (verified: %2$b)</string>
    <string name="firebase_status_fmt">Firebase UID: %s</string>
    <string name="title_activity_bottom_nav">BottomNavActivity</string>
    <string name="title_timeline">Timeline</string>
    <string name="title_speakers">Speakers</string>
    <string name="title_qr">QR Code</string>
    <string name="title_map">Map</string>
    <string name="title_sponsors">Sponsors</string>
    <string name="title_faq">FAQ</string>
    <string name="title_us">About Us</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <string name="ques1">What is the venue of the Hackathon?</string>
    <string name="ans1">First Phase of the Hackathon is Online that is Idea submission. Main event which is from 16th March will be conducted in Anna Auditorium, VIT Vellore.</string>

    <string name="ques2">Is it necessary for the whole team to be present all the time?</string>
    <string name="ans2">No, not necessarily, but at least one member should be present while pitching.</string>

    <string name="ques3">Do I need to have specific qualifications to be part of the hackathon?</string>
    <string name="ans3">If you love to code, you\'re more than welcome to participate in the hackathon.</string>

    <string name="ques4">What is the cost of the Hackathon?</string>
    <string name="ans4">There is no registration fee for the hackathon. It is absolutely free.</string>
    
    <string name="verification">A verification mail has been sent to your Email Account!</string>
    <string name="resend"><u>If you didn\'t receive the mail, click here</u></string>
    <string name="sign_up_link">New Here? Sign Up</string>
    <string name="sign_in_link">Already Registered?</string>

</resources>
