<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_timeline"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_timeline" />


    <item
        android:id="@+id/navigation_faq"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/title_faq" />

    <item
        android:id="@+id/navigation_qr"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/title_qr" />

    <item
        android:id="@+id/navigation_sponsors"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/title_sponsors" />

    <item
        android:id="@+id/navigation_speakers"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/title_speakers" />

    <item
        android:id="@+id/navigation_us"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/title_us" />


</menu>