<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_timeline">

    <fragment
        android:id="@+id/navigation_timeline"
        android:name="com.anuj.devsocsignup.ui.timeline.TimelineFragment"
        android:label="@string/title_timeline"
        tools:layout="@layout/fragment_timeline" />

    <fragment
        android:id="@+id/navigation_us"
        android:name="com.anuj.devsocsignup.ui.us.UsFragment"
        android:label="@string/title_faq"
        tools:layout="@layout/fragment_us" />

    <fragment
        android:id="@+id/navigation_speak"
        android:name="com.anuj.devsocsignup.ui.speaker.SpeakerFragment"
        android:label="@string/title_qr"
        tools:layout="@layout/fragment_speaker" />

    <fragment
        android:id="@+id/navigation_user"
        android:name="com.anuj.devsocsignup.ui.user.UserFragment"
        android:label="@string/title_speakers"
        tools:layout="@layout/fragment_user" />

</navigation>